<resources>
    <string name="app_name">TestTaskSociality</string>
    <string name="title_locations">Locations</string>
    <string name="title_personage">Characters</string>
    <string name="title_episodes">Episodes</string>
    <string name="unknown_error">Unknown error</string>
    <string name="name_location">Name</string>
    <string name="type_location">Type</string>
    <string name="dimension_location">Dimension</string>
    <string name="progress_bar_message">Loading</string>
    <string name="detial_location_fragment_title">Detial Location</string>
    <string name="detail_episode_fragment_title">Detail Episode</string>
    <string name="detail_character_fragment">Detail character</string>
</resources>